Agregando meta property facebook

--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords"
-        content="Desarrollo web, pagina web, marino pablo, Marino Pablo desarrollador Web, pagina web Sololá Guatemala">
+    <meta name="keywords"ncontent="Desarrollo web, pagina web, marino pablo, pagina web Sololá Guatemala">
     <meta name="description" content="Marino Pablo desarrollador Web, Creación de sitios web informativa para 
-    colegios, negocios, cooperativas, imagen publica, etc.">
+     negocios, colegios, cooperativas, imagen publica, etc.">
+
+     <meta property="og:url"                content="http://www.marinopablo.com/index.html" />
+     <meta property="og:type"               content="article" />
+     <meta property="og:title"              content="Marino Pablo" />
+     <meta property="og:description"        content="Portafolio de los proyectos y habilidades durante mis formación en la web" />
+     <meta property="og:image"              content="https://marinopablo.com/banner.png" />
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="logo.ico">
-    <title>Marino Pablo | Desarrollador Web</title>
+    <title>Marino Pablo Desarrollador Web</title>
 </head>
 
 <body>
