--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <meta property="og:type"               content="article" />
      <meta property="og:title"              content="Marino Pablo" />
      <meta property="og:description"        content="Portafolio de los proyectos y habilidades durante mis formación en la web" />
-     <meta property="og:image"              content="https://marinopablo.com/banner.png" />
+     <meta property="og:image"              content="https://marinopablo.com/img/portada-facebook.jpg" />
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
