agragando section.services

--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords"ncontent="Desarrollo web, pagina web, marino pablo, pagina web Sololá Guatemala">
+    <meta name="keywords" ncontent="Desarrollo web, pagina web, marino pablo, pagina web Sololá Guatemala">
     <meta name="description" content="Marino Pablo desarrollador Web, Creación de sitios web informativa para 
      negocios, colegios, cooperativas, imagen publica, etc.">
 
-     <meta property="og:url"                content="http://www.marinopablo.com/index.html" />
-     <meta property="og:type"               content="article" />
-     <meta property="og:title"              content="Marino Pablo" />
-     <meta property="og:description"        content="Portafolio de los proyectos y habilidades durante mis formación en la web" />
-     <meta property="og:image"              content="https://marinopablo.com/img/portada-facebook.jpg" />
+    <meta property="og:url" content="http://www.marinopablo.com/index.html" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Marino Pablo" />
+    <meta property="og:description"
+        content="Portafolio de los proyectos y habilidades durante mis formación en la web" />
+    <meta property="og:image" content="https://marinopablo.com/img/portada-facebook-min.png" />
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="logo.ico">
+    <link rel="icon" href="img/logo.ico">
     <title>Marino Pablo Desarrollador Web</title>
 </head>
 
@@ -29,7 +31,7 @@
                 <div class="container-avatar">
                     <div class="avatar">
                         <div class="image">
-                            <img src="avatar.min.jpg" alt="Marino Pablo Desarrollador Web">
+                            <img src="img/avatar.min.jpg" alt="Marino Pablo Desarrollador Web">
                         </div>
                     </div>
                 </div>
@@ -49,6 +51,26 @@
             </div>
         </div>
     </div>
+    <section class="services">
+        <div class="container">
+            <div class="row">
+                <div class="content">
+                    <h1>Diseño de páginas web <span>en Guatemala</span> </h1>
+                    <p>Desarrollo de sitios web para negocios, cooperativas, colegios, imagen pública, etc. Será un gusto 
+                        en poder ser parte de tu proyectos.</p>
+                    <p class="descrip"><small>Un sitio web míralo como una oficina virtual 24/7/365</small> </p>
+                </div>
+                <div class="image">
+                    <img src="img/page-min.png" alt="mockups page with marino pablo">
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <p>&copy; Copyright 2019 Marino pablo</p>
+        </div>
+    </footer>
 </body>
 
 </html>
